# reporting-aggregation-service

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  pr-auto-merge.yml
docs/standards/: data-model-ownership.md  durability-consistency.md  enterprise-readiness.md  migration-contract.md  monetary-float-allowlist.json  rounding-precision.md  scalability-availability.md
rfcs/: RFC-0001-test-pyramid-rebalance-and-meaningful-coverage-hardening.md
scripts/: check_monetary_float_usage.py  migration_contract_check.py  openapi_quality_gate.py
src/app/: config.py  enterprise_readiness.py  main.py  observability.py  precision_policy.py
src/app/clients/: http_resilience.py  pa_client.py  pas_client.py  risk_client.py
src/app/models/: contracts.py
src/app/routers/: aggregations.py  health.py  integration.py  reports.py
src/app/services/: aggregation_service.py  reporting_read_service.py
tests/e2e/: test_reporting_workflows.py
tests/fixtures/: rounding-golden-vectors.json
tests/integration/: test_api.py
tests/unit/: test_aggregation_service.py  test_aggregation_service_additional.py  test_clients.py  test_enterprise_readiness.py  test_http_resilience.py  test_observability.py  test_precision_policy.py  test_reporting_read_service.py  test_reporting_read_service_additional.py  test_rounding_golden_vectors.py  test_routers.py
