[project]
name = "reporting-aggregation-service"
version = "0.1.0"
description = "Reporting and aggregation service for PBWM platform."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.7",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "httpx>=0.28.1",
  "ruff>=0.12.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
