[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reporting-aggregation-service"
version = "0.1.0"
description = "Reporting and aggregation service for PBWM platform."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.1",
  "prometheus-fastapi-instrumentator>=7.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=0.23.8",
  "httpx>=0.28.1",
  "ruff>=0.12.10",
  "mypy>=1.19.1",
  "pytest-cov>=6.2.1",
  "coverage>=7.10.6",
  "pre-commit>=4.3.0",
  "pip-audit>=2.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
branch = true
source = ["src/app"]
